test/cases/compile_errors/only_equality_binary_operator_allowed_for_error_sets.zig
comptime {
    const z = error.A > error.B;
    _ = z;
}

// error
// backend=stage2
// target=native
//
// :2:23: error: operator > not allowed for type 'error{A,B}'
